cmake_minimum_required(VERSION 2.8)
project(ppp)
set(CMAKE_CXX_STANDARD 17)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")
set(bbo_libs)
link_directories(${PROJECT_SOURCE_DIR}/libs)
set(bbo_libs ${bbo_libs} KPL_IO)
set(bbo_libs ${bbo_libs} KPL_SDK)
FILE(GLOB SOURCE_ALL ${PROJECT_SOURCE_DIR}/*.cpp)
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -g")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -ggdb -lm")
add_executable(ppp ${SOURCE_ALL})
target_link_libraries(ppp ${bbo_libs})
target_link_libraries(ppp pthread)
